<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_qr_bar_code_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/grey_qr"
            android:text="@string/make_sure_you_are_scanning_the_right_image"/>


        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:background="@drawable/recteangle"
            android:textSize="@dimen/_11ssp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/close"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>