<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/lnTos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/tos_qr"
                android:textColor="@color/grey_qr"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/txtTos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColorLink="@android:color/holo_blue_dark"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnccs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/ccs_qr"
                android:textColor="@color/grey_qr"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/txtccs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColorLink="@android:color/holo_blue_dark"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnbccs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/bccs_qr"
                android:textColor="@color/grey_qr"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/txtbccs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnsubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/subject_qr"
                android:textColor="@color/grey_qr"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/txtsubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnbody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/body_qr"
                android:textColor="@color/grey_qr"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/txtbody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>


    </LinearLayout>
</layout>